--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.1",
     "@testing-library/jest-dom": "^5.14.1",
